<resources>
    <string name="app_name">FIND A TOUR !</string>
    <string name="sign_up_name_hint">Name</string>
    <string name="sign_up_surname_hint">Surname</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button">LOG IN</string>
    <string name="enroll_button">SIGN UP NOW!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_sign_up">E-Mail Address</string>
    <string name="username_sing_up">Username</string>
    <string name="password_sign_up">Password</string>
    <string name="sign_up_button">SIGN UP!</string>
    <string name="back_button_from_sign_up">BACK TO LOGIN</string>
    <string name="title_activity_tourist_main">TouristMain</string>
    <string name="tourist_main_find">FIND</string>
    <string name="tourist_main_find_place">City</string>
    <string name="tourist_main_find_start_time">Start Time</string>
    <string name="tourist_main_find_end_time">End Time</string>
    <string name="tourist_main_find_get_date">Tour Date</string>
    <string name="tourist_main_find_language">Select Language</string>
    <string name="create_tour">Create A New Tour!</string>
    <string-array name="tourist_main_find_language_array">
    <item>English</item>
    <item>German</item>
    <item>Spanish</item>
    </string-array>
    <string name="title_activity_tour_guide_main">TourGuideMain</string>
    <string name="title_activity_tour_detail">TourDetail</string>
    <string name="title_activity_create_tour">CreateTourActivity</string>
    <string name="title_activity_look_tourist_guide_tours">LookTouristGuideTours</string>



    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_tourist_guide_main">TouristGuideMainActivity</string>
    <string name="title_activity_tour_admin">TourAdminActivity</string>
</resources>
