<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ozanalpay.draft.TouristMain">


    <ScrollView
        android:id="@+id/tourist_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        ></ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tourist_main_place_input"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_main_find_place"
            android:singleLine="true"
            android:inputType="text"/>
        <Button
            android:id="@+id/tourist_main_place_start_date_input_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_main_find_get_date"

            />
        <Button
            android:id="@+id/tourist_main_place_start_time_input_button"
            android:hint="@string/tourist_main_find_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <Button
            android:id="@+id/tourist_main_place_end_time_input_button"
            android:hint="@string/tourist_main_find_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            />







        </LinearLayout>
    <Spinner
        android:prompt="@string/tourist_main_find_language"
        android:id="@+id/tourist_main_find_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tourist_main_find_language_array"
        />



    <Button
        android:id="@+id/activity_tourist_main_find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tourist_main_find"
        />
    <TextView
        android:id="@+id/activity_tourist_main_start_show_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/activity_tourist_main_end_show_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/activity_tourist_main_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />





</LinearLayout>
